# libesp

./: CMakeLists.txt  GeneralUtils.cpp  GeneralUtils.h  HttpParser.cpp  HttpParser.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  LICENSE  README.md  SSLUtils.cpp  SSLUtils.h  SockServ.cpp  SockServ.h  Socket.cpp  Socket.h  WebSocket.cpp  WebSocket.h  WebSocketFileTransfer.cpp  WebSocketFileTransfer.h  adc.cpp  adc.h  component.mk  error_type.cpp  error_type.h  event_bus.h  fatfsvfs.cpp  file.cpp  file.h  filesystem.cpp  filesystem.h  freertos.cpp  freertos.h  generateCMake.sh  i2c.cpp  i2c.hpp  i2cbus.cpp  (+19 more)
app/: app.cpp  app.h  basemenu.cpp  basemenu.h  display_message_state.cpp  display_message_state.h
device/: component.mk
device/atecc608a/: atecc608a.h
device/display/: GC9A01.cpp  GC9A01.h  basic_back_buffer.cpp  basic_back_buffer.h  color.cpp  color.h  display.h  display_device.cpp  display_device.h  display_gui.cpp  display_gui.h  display_types.cpp  display_types.h  ep_display_device.cpp  ep_display_device.h  fonts.cpp  fonts.h  frame_buffer.cpp  frame_buffer.h  gui.cpp  gui.h  layout.cpp  layout.h  oled_font.cpp  oled_font.h  ssd1306.cpp  ssd1306.h  ssd1306_display.cpp  ssd1306_display.h
device/hwbutton/: buttonmanager.h
device/leds/: apa102.cpp  apa102.h  led_color.cpp  led_color.h  led_strip_encoder.cpp  noclockprgled.cpp  noclockprgled.h  rgb4pinled.cpp  rgb4pinled.h
device/sensor/: dht11.cpp  dht11.h  dht22.cpp  dht22.h  hcsr04.cpp  hcsr04.h  mhz19b.cpp  mhz19b.h  vl53l0x.cpp  vl53l0x.h
device/shiftregister/: software_shift.cpp  software_shift.h
device/touch/: XPT2046.cpp  XPT2046.h
math/: bbox2d.cpp  bbox2d.h  bounding_volume.h  point.cpp  point.h  rectbbox.cpp  rectbbox.h  vec_math.cpp  vec_math.h
memory/: fixed_class_allocator.h
net/: esp32inet.cpp  esp32inet.h  networktimeprotocol.cpp  networktimeprotocol.h  ota.cpp  ota.h  utilities.cpp  utilities.h  webserver.cpp  webserver.h  wifi.cpp  wifi.h  wifieventhandler.cpp  wifieventhandler.h
utility/: bitarray.cpp  bitarray.h
wifi/: WiFi.h
