set(srcs "./memory.cpp"
	"./nvs_memory.cpp"
	"./freertos.cpp"
	"./utility/bitarray.cpp"
	"./error_type.cpp"
	"./task.cpp"
	"./filesystem.cpp"
	"./json/JSON.cpp"
	"./spibus.cpp"
	"./device/touch/XPT2046.cpp"
	"./device/leds/apa102.cpp"
	"./device/leds/led_color.cpp"
	"./device/leds/rgb4pinled.cpp"
	"./device/display/display_device.cpp"
	"./device/display/color.cpp"
	"./device/display/fonts.cpp"
	"./device/display/gui.cpp"
	"./device/display/frame_buffer.cpp"
	"./device/display/layout.cpp"
	"./device/display/ssd1306.cpp"
	"./device/display/oled_font.cpp"
	"./device/sensor/dht11.cpp"
	"./fatfsvfs.cpp"
	"./app/app.cpp"
	"./app/basemenu.cpp"
	"./app/display_message_state.cpp"
	"./GeneralUtils.cpp"
	"./i2c.cpp"
	"./math/point.cpp"
    "./math/bbox2d.cpp"
    "./math/rectbbox.cpp"
	"./spidevice.cpp"
	"./system.cpp"
	"./file.cpp"
	"./net/esp32inet.cpp"
	"./net/wifi.cpp"
	"./net/wifieventhandler.cpp"
)

idf_component_register(SRCS "${srcs}"
		REQUIRES mbedtls nvs_flash json mdns fatfs esp_wifi soc 
		INCLUDE_DIRS ../esp-etl/include ../esp-etl/etl/include/ .
		)

